[build-system]
requires = [
    "setuptools>= 61.0.0",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "picotui"
description = "A simple text user interface (TUI) library."
dynamic = ["version"]
readme = "README.rst"

# legacy bits and new both fail in different versions
# need workaround until PEP639 has more backend support
# for now, use deprecated format for conda compatibility
#license = "MIT"
license = {"text" = "MIT"}

authors = [
    {name = "Paul Sokolovsky"},
    {email = "pfalcon@users.sourceforge.net"},
]
maintainers = [
    {name = "Stephen L Arnold", email = "stephen.arnold42@gmail.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
]

# dependencies = []

requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy==0.990",
    "black >= 22.3.0",
    "pylint >= 3.1.0",
]
cov = [
    "covdefaults",
    "coverage[toml]",
]
doc = [
    "sphinx",
    "sphinx_git",
    "sphinxcontrib.apidoc",
    "myst-parser",
    "sphinx_rtd_theme<3.0.0",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/pfalcon/picotui"
Repository = "https://github.com/pfalcon/picotui.git"
Issues = "https://github.com/pfalcon/picotui/issues"
Changelog = "https://github.com/pfalcon/picotui/blob/master/CHANGELOG.rst"

[tool.setuptools.packages.find]
namespaces = true
include = [
    "picotui",
]
exclude = [
    "docs/",
    "tests/",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli =  true
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"

[tool.coverage.run]
branch = true
source_pkgs = ["picotui"]
omit = [
    "examples/*",
    "tests/*",
    "setup.py",
    ".tox",
]

[tool.coverage.paths]
source = ["picotui"]

[tool.coverage.report]
fail_under = 15
show_missing = true
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 90
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | docs
  | dist
  | tests
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
exclude =  [".tox"]

[tool.bandit]
exclude_dirs = ["docs", "tests"]
skips = ["B101"]
