[metadata]
name = 
version = attr: setuptools_scm.get_version
description = A simple text user interface (TUI) library.
url = https://github.com/sarnold/picotui
author = Paul Sokolovsky
author_email = pfalcon@users.sourceforge.net
maintainer = Stephen Arnold
maintainer_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Embedded Systems

project_urls =
    Bug Reports = https://github.com/sarnold/picotui/issues
    Source = https://github.com/sarnold/picotui.git

[options]
python_requires = >= 3.6

setup_requires =
    setuptools_scm[toml]

install_requires =

packages =
    picotui

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    sphinx_rtd_theme<3.0
    sphinxcontrib-apidoc
    myst-parser
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
